[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Test_area.gd" type="Script" id=1]
[ext_resource path="res://Scenes/OBJS/Transistor.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/OBJS/Energy_provider.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 200, 200 )

[sub_resource type="InputEventAction" id=2]
action = "O"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="Test_area" type="Node2D"]
script = ExtResource( 1 )

[node name="PROCESSOR_AREA" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PROCESSOR_AREA"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="PROCESSOR_AREA"]
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
color = Color( 0.0509804, 0.0509804, 0.0509804, 1 )

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 20
current = true

[node name="TOOLBAR" type="GridContainer" parent="Camera2D"]
margin_left = -320.0
margin_top = 256.0
margin_right = 320.0
margin_bottom = 320.0
columns = 7

[node name="E" type="GridContainer" parent="Camera2D/TOOLBAR"]
margin_right = 88.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Camera2D/TOOLBAR/E"]
margin_right = 88.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "E"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Camera2D/TOOLBAR/E"]
margin_left = 28.0
margin_top = 28.0
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color( 0.290196, 0.0745098, 0.0745098, 1 )

[node name="B" type="GridContainer" parent="Camera2D/TOOLBAR"]
margin_left = 92.0
margin_right = 180.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Camera2D/TOOLBAR/B"]
margin_right = 88.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "B"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Camera2D/TOOLBAR/B"]
margin_left = 28.0
margin_top = 28.0
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 6
size_flags_vertical = 6
color = Color( 0.560784, 0.560784, 0.560784, 1 )

[node name="X" type="GridContainer" parent="Camera2D/TOOLBAR"]
margin_left = 184.0
margin_right = 272.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Camera2D/TOOLBAR/X"]
margin_right = 88.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "X
Remove all Energy cables"
align = 1
valign = 1
autowrap = true

[node name="T" type="GridContainer" parent="Camera2D/TOOLBAR"]
margin_left = 276.0
margin_right = 364.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Camera2D/TOOLBAR/T"]
margin_right = 88.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "T
Zoom in"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="G" type="GridContainer" parent="Camera2D/TOOLBAR"]
margin_left = 368.0
margin_right = 456.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Camera2D/TOOLBAR/G"]
margin_right = 88.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "G
Zoom out"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="Q" type="GridContainer" parent="Camera2D/TOOLBAR"]
margin_left = 460.0
margin_right = 548.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Camera2D/TOOLBAR/Q"]
margin_right = 88.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Drag and Q
Delete item"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="O" type="GridContainer" parent="Camera2D/TOOLBAR"]
margin_left = 552.0
margin_right = 640.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Camera2D/TOOLBAR/O"]
margin_right = 88.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "O
On/Off
energy"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="R" type="GridContainer" parent="Camera2D/TOOLBAR"]
visible = false
margin_top = 54.0
margin_right = 88.0
margin_bottom = 64.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Camera2D/TOOLBAR/R"]
margin_right = 88.0
margin_bottom = 10.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Drag and R
Rotate item"
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="ENERGY" type="Button" parent="."]
margin_left = -176.0
margin_top = -256.0
margin_right = -64.0
margin_bottom = -224.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
shortcut = SubResource( 3 )
text = "Energy"

[node name="TRANSISTORS" type="Button" parent="."]
margin_left = 40.0
margin_top = -256.0
margin_right = 152.0
margin_bottom = -224.0
focus_mode = 0
enabled_focus_mode = 0
shortcut = SubResource( 3 )
text = "Transistors"

[node name="OBJS" type="Node2D" parent="."]

[node name="Transistor" parent="OBJS" instance=ExtResource( 2 )]
position = Vector2( -80, -80 )
TYPE = "potencia_computacional_atual"

[node name="Energy_provider" parent="OBJS" instance=ExtResource( 3 )]
position = Vector2( 16, -128 )
TYPE = "potencia_energetica_atual"

[node name="INFOS" type="Node2D" parent="."]

[node name="Label" type="Label" parent="INFOS"]
margin_left = -448.0
margin_top = -184.0
margin_right = -208.0
margin_bottom = 56.0
text = "PotÃªncia: 1"

[connection signal="toggled" from="ENERGY" to="." method="_on_ENERGY_toggled"]
[connection signal="button_up" from="TRANSISTORS" to="." method="_on_TRANSISTORS_button_up"]
